--- a/my-newpaper/src/App.css
+++ b/my-newpaper/src/App.css
@@ -24,7 +24,6 @@ img {
 
 .logo {
   margin: auto;
-  text-align: 
 }
 
 ul {
@@ -43,5 +42,30 @@ body {
 
 a {
   text-align: center;
+  text-decoration: none;
 }
 
+.logo1 {
+  max-width: 60px;
+  max-height: 60px;
+}
+
+.grid-footer {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns:  repeat(3, 2fr);
+  color: #f7f7f7;
+  padding-top: 100px;
+  padding-left: 40px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  background-position-x: center;
+  border-radius: 16px;
+  column-gap: 20px;
+
+  }
+
+  li {
+    display: inline;
+  }
